java_library(
    name = "concurrent",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/mernst/auto:value",
        "//src/main/java/org/mernst/collect",
        "//src/main/java/org/mernst/functional",
        "@com_google_guava_guava",
        "@com_google_inject_guice",
        "@grpc_grpc_java//api",
        "@javax_inject_javax_inject",
    ],
)
