java_library(
    name = "json",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/mernst/collect",
        "//src/main/java/org/mernst/concurrent",
        "//src/main/java/org/mernst/http/server:result",
        "@com_fasterxml_jackson_core_jackson_core",
        "@com_fasterxml_jackson_core_jackson_databind",
        "@com_google_guava_guava",
        "@com_google_inject_guice",
    ],
)
