java_library(
    name = "metrics",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/mernst/auto:value",
        "@com_google_api_grpc_proto_google_cloud_monitoring_v3",
        "@com_google_api_grpc_proto_google_common_protos",
        "@com_google_cloud_google_cloud_monitoring",
        "@com_google_guava_guava",
        "@com_google_inject_guice",
        "@com_google_protobuf_protobuf_java_util",
        "@com_squareup_okhttp3_okhttp",
        "@io_grpc_grpc_api",
        "@javax_annotation_javax_annotation_api",
        "@javax_inject_javax_inject",
    ],
)
