java_library(
    name = "client",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_auth_google_auth_library_oauth2_http",
        "@com_google_inject_guice",
        "@grpc_grpc_java//api",
        "@io_grpc_grpc_auth",
        "@io_grpc_grpc_context",
        "@io_grpc_grpc_stub",
    ],
)
