java_library(
    name = "server",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@io_grpc_grpc_core",
        "@io_grpc_grpc_netty",
        "@io_perfmark_perfmark_api",
    ],
    deps = [
        "//src/main/java/org/mernst/concurrent",
        "@com_google_guava_guava",
        "@com_google_inject_guice",
        "@grpc_grpc_java//api",
    ],
)
