RESULT = [
    "HttpResult.java",
]

ACTION = [
    "Action.java",
    "ActionsModule.java",
    "Headers.java",
    "HttpResponder.java",
    "Param.java",
    "Path.java",
    "RequestMethod.java",
]

java_library(
    name = "result",
    srcs = RESULT,
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/org/mernst/auto:value",
        "//src/main/java/org/mernst/collect",
        "//src/main/java/org/mernst/concurrent",
        "@com_google_guava_guava",
        "@com_google_inject_guice",
    ],
)

java_library(
    name = "action",
    srcs = ACTION,
    visibility = ["//visibility:public"],
    deps = [
        ":result",
        "//src/main/java/org/mernst/auto:annotation",
        "//src/main/java/org/mernst/collect",
        "//src/main/java/org/mernst/concurrent",
        "@com_google_guava_guava",
        "@com_google_http_client_google_http_client",
        "@com_google_inject_guice",
        "@com_squareup_okhttp3_okhttp",
        "@grpc_grpc_java//api",
        "@javax_inject_javax_inject",
    ],
)

java_library(
    name = "server",
    srcs = glob(
        ["*.java"],
        exclude = ACTION + RESULT,
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":action",
        ":result",
        "//src/main/java/org/mernst/concurrent",
        "//src/main/java/org/mernst/context",
        "@com_google_guava_guava",
        "@com_google_http_client_google_http_client",
        "@com_google_inject_guice",
        "@com_squareup_okhttp3_okhttp",
        "@grpc_grpc_java//api",
        "@grpc_grpc_java//context",
    ],
)
